<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFB52B">
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/background_content"
        android:textColor="#CFBF6A"
        android:textSize="50sp"
        android:textStyle="bold" />
<LinearLayout
    android:id="@+id/valueNumberEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:drawableLeft="@drawable/ic_launcher"
            android:text="@string/add_fine"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fine_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/fineAdderDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fine_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/fineAdderValueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/fineAdderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_fine" />

</LinearLayout>
</FrameLayout>