<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFB52B">

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/background_content"
        android:textColor="#CFBF6A"
        android:textSize="50sp"
        android:textStyle="bold" />
<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<RelativeLayout 
	android:id="@+id/header"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/calendar_header_background"
    >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    >
<TextView  
	android:id="@+id/previous" 
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:textSize="14sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:gravity="center_horizontal"
    android:text="@string/less_than_less_than" 
    android:clickable="true"   
    />
</LinearLayout>

<TextView  
	android:id="@+id/title" 
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:textSize="14sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:gravity="center_horizontal"
    />
    <!-- android:layout_toRightOf="@id/previous"  -->
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="right">
    <!-- android:layout_toRightOf="@+id/title"  -->
    
<TextView  
	android:id="@+id/next" 
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:textSize="14sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:gravity="center_horizontal"
    android:text="@string/greater_than_greater_than"
    android:clickable="true"
    />
</LinearLayout>

</RelativeLayout>

<GridView  
    android:id="@+id/gridview"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    
    android:numColumns="7"
    android:verticalSpacing="2dp"
    android:horizontalSpacing="2dp"
    android:stretchMode="columnWidth"
    
    android:gravity="center"
/>
</LinearLayout>
</FrameLayout>